<resources>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_message_default">Talk to me on skyTox like a reasonable human being.</string>
    <string name="add_contact_message_error_empty">Write something to send first</string>
    <string name="app_name" translatable="false">skyTox</string>
    <string name="confirm">Confirm</string>
    <string name="connecting">Connecting…</string>
    <string name="contact_typing">Typing…</string>
    <string name="copied">Copied</string>
    <string name="copy_atox">Copy</string>
    <string name="copy_part">Copy part</string>
    <string name="select_message">Select</string>
    <string name="forward_message">Forward</string>
    <string name="select_text_to_copy">Select the part you need, then use the Android copy action.</string>
    <string name="forward_to">Forward to</string>
    <string name="no_contacts_to_forward">No contacts to forward to</string>
    <string name="delete_selected_confirm">Delete selected messages?</string>
    <string name="create">Create</string>
    <string name="create_a_tox_profile">Create a Tox profile</string>
    <string name="delete_contact">Delete contact</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="messages_incoming">Incoming messages</string>
    <string name="name">Name</string>
    <string name="name_default">skyTox user</string>
    <string name="no_contacts_call_to_action">What are you waiting for? Add a contact to get started!</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="profile_photo_description">Profile photo</string>
    <string name="reject">Reject</string>
    <string name="send">Send</string>
    <string name="sending">Sending…</string>
    <string name="settings">Settings</string>
    <string name="status_indicator">Status indicator</string>
    <string name="status_message">Status message</string>
    <string name="status_message_default">Brought to you live, by skyTox</string>
    <string name="tox_id">Tox ID</string>
    <string name="tox_id_error_length">Tox ID must be 76 characters (%1$d/76)</string>
    <string name="tox_id_error_checksum">Invalid checksum</string>
    <string name="tox_id_error_hex">Only hex allowed</string>
    <string name="tox_id_share">Share Tox ID</string>
    <string name="update">Update</string>
    <string name="quit">Quit</string>
    <string name="quit_confirm">Are you sure you wish to quit?</string>
    <string name="call_confirm">Are you sure you wish to call?</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_request_from">Friend request from %1$s</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_cleared">History cleared</string>
    <string name="clear_history_confirm">Are you sure you want to clear your chat history with %1$s?</string>
    <string name="delete_message_confirm">Are you sure you want to delete the message \"%1$s\"?</string>
    <string name="import_tox_save">Import</string>
    <string name="import_tox_save_failed">Import failed: %1$s</string>
    <string name="export_tox_save">Export Tox save</string>
    <string name="tox_save_exported">Tox save exported</string>
    <string name="never">Never</string>
    <string name="info">Info</string>
    <string name="atox_offline">Offline</string>
    <string name="atox_connected_with_tcp">Connected (TCP)</string>
    <string name="atox_connected_with_udp">Connected (UDP)</string>
    <string name="read_qr">QR</string>
    <string name="pref_heading_theme">Theme</string>
    <string name="pref_theme_follow_system">Follow system</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string-array name="pref_theme_options">
        <item>@string/pref_theme_follow_system</item>
        <item>@string/pref_theme_light</item>
        <item>@string/pref_theme_dark</item>
    </string-array>
    <string name="pref_heading_ft_auto_accept">Auto-accept file transfers</string>
    <string name="pref_ft_auto_accept_none">None</string>
    <string name="pref_ft_auto_accept_images">Images</string>
    <string name="pref_ft_auto_accept_all">All</string>
    <string name="file_send_batch_limited">You can send up to %1$d files at once. Only the first %1$d files will be sent.</string>
    <string-array name="pref_ft_auto_accept_options">
        <item>@string/pref_ft_auto_accept_none</item>
        <item>@string/pref_ft_auto_accept_images</item>
        <item>@string/pref_ft_auto_accept_all</item>
    </string-array>
    <string name="pref_pending_file_retention">Keep pending files</string>
    <string name="pref_pending_file_retention_1d">1 day</string>
    <string name="pref_pending_file_retention_3d">3 days</string>
    <string name="pref_pending_file_retention_7d">7 days</string>
    <string name="pref_pending_file_retention_30d">30 days</string>
    <string-array name="pref_pending_file_retention_options">
        <item>@string/pref_pending_file_retention_1d</item>
        <item>@string/pref_pending_file_retention_3d</item>
        <item>@string/pref_pending_file_retention_7d</item>
        <item>@string/pref_pending_file_retention_30d</item>
    </string-array>
    <string name="pref_pending_queue_limit">Maximum queue</string>
    <string name="pref_pending_queue_limit_512mb">512 MB</string>
    <string name="pref_pending_queue_limit_1gb">1 GB</string>
    <string name="pref_pending_queue_limit_2gb">2 GB</string>
    <string-array name="pref_pending_queue_limit_options">
        <item>@string/pref_pending_queue_limit_512mb</item>
        <item>@string/pref_pending_queue_limit_1gb</item>
        <item>@string/pref_pending_queue_limit_2gb</item>
    </string-array>
    <string name="pref_heading_type">Type</string>
    <string name="pref_proxy_type_none">None</string>
    <string name="pref_proxy_type_http">HTTP</string>
    <string name="pref_proxy_type_socks5">SOCKS5</string>
    <string-array name="pref_proxy_type_options">
        <item>@string/pref_proxy_type_none</item>
        <item>@string/pref_proxy_type_http</item>
        <item>@string/pref_proxy_type_socks5</item>
    </string-array>
    <string name="pref_heading_advanced">Advanced</string>
    <string name="pref_heading_bootstrap_nodes">Bootstrap node source</string>
    <string name="pref_bootstrap_node_builtin">Built-in</string>
    <string name="pref_bootstrap_node_user_provided">User-provided</string>
    <string-array name="pref_bootstrap_node_options">
        <item>@string/pref_bootstrap_node_builtin</item>
        <item>@string/pref_bootstrap_node_user_provided</item>
    </string-array>
    <string name="pref_bootstrap_nodes_description">User-provided JSON files must have the same format as on https://nodes.tox.st/json</string>
    <string name="version_display" translatable="false">skyTox v%1$s — %2$d</string>
    <string name="send_as_action">Send as action</string>
    <string name="or_import_existing_save">or import an existing Tox save</string>
    <string name="profile_information">Profile information</string>
    <string name="profile_settings">Profile settings</string>
    <string name="profile_nickname">Change your nickname</string>
    <string name="profile_status_message">Change your status message</string>
    <string name="profile_status">Change your status</string>
    <string name="profile_logout">Log out</string>
    <string name="profile_logout_confirm">All chats and the user profile will be exported, and the app will be cleared.</string>
    <string name="profile_logout_failed">Could not log out: %1$s</string>
    <string name="profile">Profile</string>
    <string name="tox_id_error_already_exists">A contact with that Tox ID already exists</string>
    <string name="tox_service_running">skyTox is running…</string>
    <string name="pref_heading_network">Network</string>
    <string name="pref_udp_enabled">UDP enabled</string>
    <string name="pref_heading_general">General</string>
    <string name="pref_run_at_startup">Run at boot</string>
    <string name="pref_confirm_quitting">Confirm app quit</string>
    <string name="pref_confirm_calling">Confirm call</string>
    <string name="pref_language">Language</string>
    <string name="pref_push_mode">Push mode</string>
    <string name="pref_push_mode_default">Keep awake</string>
    <string name="pref_push_mode_google_wake">Wake app</string>
    <string name="restart_app_title">Restart app</string>
    <string name="push_mode_restart_required">Restart skyTox to fully apply this Push mode</string>
    <string-array name="pref_push_mode_options">
        <item>@string/pref_push_mode_default</item>
        <item>@string/pref_push_mode_google_wake</item>
    </string-array>
    <string name="pref_language_russian">Русский</string>
    <string name="pref_language_english">English</string>
    <string-array name="pref_language_options">
        <item>@string/pref_language_russian</item>
        <item>@string/pref_language_english</item>
    </string-array>
    <string name="friend_request">Friend request</string>
    <string name="status_available">Available</string>
    <string name="status_away">Away</string>
    <string name="status_busy">Busy</string>
    <string-array name="user_statuses">
        <item>@string/status_available</item>
        <item>@string/status_away</item>
        <item>@string/status_busy</item>
    </string-array>
    <string name="from">From</string>
    <string name="status_dialog_edit_user_status">Edit your status</string>
    <string name="mimetype_handler_not_found">There are no apps installed to handle the \"%1$s\" media type</string>
    <string name="attach_file">Attach file</string>
    <string name="voice_message">Voice message</string>
    <string name="voice_record_failed">Could not record voice message</string>
    <string name="play_audio">Play audio</string>
    <string name="delete">Delete</string>
    <string name="notification_file_transfer">Incoming file transfer \"%1$s\"</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="interrupted">Interrupted</string>
    <string name="queued">Waiting</string>
    <string name="expired">Expired</string>
    <string name="pending_file_queued">File queued until the contact is online</string>
    <string name="pending_queue_full">Pending file queue is full</string>
    <string name="save_as">Save as…</string>
    <string name="export_file_success">File exported</string>
    <string name="export_file_failure">Something went wrong exporting that. Pre-0.5.1 transfers were exported by default.</string>
    <string name="draft_message">Draft: %1$s</string>
    <string name="pref_heading_address">Address</string>
    <string name="pref_heading_port">Port</string>
    <string name="pref_heading_proxy">Proxy</string>
    <string name="call">Call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="video_call">Video call</string>
    <string name="export_history">Export history</string>
    <string name="import_history">Import history</string>
    <string name="export_text_chats">Export text chats</string>
    <string name="import_text_chats">Import text chats</string>
    <string name="import_export_instructions">Export/import guide</string>
    <string name="import_export_menu">Export/import</string>
    <string name="chats">Chats</string>
    <string name="add_contact_short">Add</string>
    <string name="update_skytox">Update skyTox</string>
    <string name="send_encrypted_message">Send encrypted message</string>
    <string name="wake_contact">Wake</string>
    <string name="export_short">Export</string>
</resources>