<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/main_section" android:checkableBehavior="single">
        <item android:id="@+id/drawer_profile" android:title="@string/profile"/>
        <item android:id="@+id/add_contact" android:title="@string/add_contact"/>
    </group>
    <group android:id="@+id/settings_section" android:checkableBehavior="single">
        <item android:id="@+id/settings" android:title="@string/settings"/>
        <item android:id="@+id/export_tox_save" android:title="@string/export_tox_save"/>
        <item android:id="@+id/export_text_chats" android:title="@string/export_text_chats"/>
        <item android:id="@+id/import_text_chats" android:title="@string/import_text_chats"/>
        <item android:id="@+id/import_export_instructions" android:title="@string/import_export_instructions"/>
    </group>
    <group android:id="@+id/quit_section" android:checkableBehavior="single">
        <item android:id="@+id/quit_tox" android:title="@string/quit"/>
    </group>
</menu>
